Resolve DB lookup race condition & fix compilation (bump Gradle, license validation), & other misc. improvements/fixes (#496)